--- a/Frontend/public/signup.html
+++ b/Frontend/public/signup.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sea Savvy</title>
-    <link rel="stylesheet" href="/src/css/signup.css">
+    <link rel="stylesheet" href="../src/css/signup.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@400;700&family=Glacial+Indifference:wght@400;700&display=swap" rel="stylesheet">
@@ -65,7 +65,7 @@
         <!-- Right side for background image -->
         <div class="right-half1">
             <div id="signup-image-box">
-                <img src="/images/signup.png" alt="Ocean Image">
+                <img src="../images/signup.png" alt="Ocean Image">
             </div>
         </div>
     </div>
